# SimpleFF

./: package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  utils.rs
src-tauri/src/commands/: ffmpeg.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/utils/: ffmpeg.rs  mod.rs
src/lib/: Checkbox.svelte  FIleItem.svelte  FileDropZone.svelte  FileListItem.svelte  Input.svelte  Select.svelte  constants.ts  state.svelte.ts  types.ts  utils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/[path]/: +page.svelte
src/routes/continue/: +page.svelte  +page.ts
